--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,11 +1,12 @@
 @import "./colors";
+@import "./mixins";
 
 .svg-inline--fa {
     height: 5rem;
     color: $text;
 
     &:hover {
-        color: $hover;
+        color: $links;
     }
 }
 
@@ -13,14 +14,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 6rem;
 
     &__title {
-        font-size: 40px;
-        margin-bottom: 3rem;
+        @include section-title;
+        align-self: flex-start;
     }
 
     &__description {
-        margin-bottom: 60px;
+        margin-bottom: 6rem;
     }
     &__sm {
         display: flex;
