Resume and navbar problems solved

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,7 +2,7 @@ $background: #190019;
 $lightpink: #FDE9FF;
 $links: #99f5ff;
 $text: #FCFCFC;
-$hover: #74BAC2;
+$hover: #82D0D9;
 $title: #F7D2F7;
 $secondary: #0E6C7D;
 $terciary: #8A008A;
