--- a/src/styles/aboutme.scss
+++ b/src/styles/aboutme.scss
@@ -11,9 +11,7 @@
   }
 
   &__description {
-    text-align:left;
-    font-size: 1.35rem;
-    font-weight: 100;
+    @include text;
 
     span {
       font-weight: 600;
