demo desktop done

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,9 +1,9 @@
 $background: #190019;
-$lightpink: #FDE9FF;
 $links: #99f5ff;
 $text: #FCFCFC;
 $hover: #82D0D9;
 $title: #F7D2F7;
-$secondary: #0E6C7D;
-$terciary: #8A008A;
+$projecttitle: #F6E27F;
+$secondary: #1F7A8C;
+
 
