--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -17,7 +17,7 @@
     margin-top: 0.25rem;
     font-weight: 800;
     font-size: 3.5rem;
-    color: #82D0D9;
+    color: $links;
     letter-spacing: 0.25rem;
   }
 }
