--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin section-title {
   font-weight: 700;
   font-size: 3rem;
-  color: $hover;
+  color: $links;
   letter-spacing: -2pt;
   padding-top: 2rem;
   margin-bottom: 3rem;
