--- a/src/styles/projectCard.scss
+++ b/src/styles/projectCard.scss
@@ -4,16 +4,19 @@
 .card {
   display: flex;
   flex-direction: column;
+  border: solid 5px $secondary !important;
+  border-radius: 5px !important;
 
   &__image {
-    height: auto;
+    height: 17.5rem;
     width: 100%;
+    border-radius: 0px !important;
   }
 
   &__info {
     display: flex;
     justify-content: space-between;
-    background-color: $background;
+    background-color: $secondary;
     height: 100px;
 
     &-text {
@@ -23,7 +26,7 @@
     &-skills {
       display: flex;
       flex-direction: row;
-      color: $lightpink;
+      color: $text;
       font-size: 1.20rem;
     }
 
@@ -41,7 +44,8 @@
 }
 
 #card-title {
-  color: $lightpink;
+  color: $projecttitle;
   font-size: 1.8rem;
+  font-weight: 600;
   width: 100%;
 }
