--- a/src/styles/header copy.scss
+++ b/src/styles/header copy.scss
@@ -23,14 +23,13 @@
 }
 
 .hidden {
-    top: -30rem;
+    top: -20rem;
     transition: top 1s ease-out;
 }
 
 .navbar-left {
     justify-content: center;
     font-size: 1.50rem;
-    padding-left: 8rem;
 }
 
 
@@ -57,43 +56,16 @@
 }
 
 @media screen and (max-width: 992px) {
-    
     .navbarmoves {
-        width: 100vw;
-        height: 5rem;
-    }
-
-    .visible {
-        top: 0;
-        transition: top 0.10s ease-out;
-        background-color: $background;
+        width: 100%;
     }
     
     .wrapper {
         width: 100vw !important;
-        --bs-gutter-x: 0rem;
     }
     
     .justify-content-end {
         background-color: $background;
         width: 100vw;
-        box-sizing: border-box;
-        padding: 25px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: auto;
-        a {
-            padding-bottom: 20px;
-        }
-
-        .navbar-left {
-            align-self: center;
-            font-size: 1.50rem;
-            padding-left: 0rem;
-            height: auto;
-            display: block;
-            padding-bottom: 20px;
-        }
     }
 }
