--- a/src/styles/projectsContainer.scss
+++ b/src/styles/projectsContainer.scss
@@ -13,3 +13,14 @@
     margin-bottom: 7rem;
   }
 }
+
+@media screen and (max-width: 992px) {
+  .projects {
+    &__wrapper {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 3rem;
+      margin-bottom: 7rem;
+    }
+  }
+}
